# hide_frames

./: .gitignore  README.md  hide_frames.py  pyproject.toml  test.py
